move .ps2/.max not supported string to resources; remove out of date comment

--- a/FPRLogoViewer/Properties/Resources.ja-JP.resx
+++ b/FPRLogoViewer/Properties/Resources.ja-JP.resx
@@ -141,4 +141,7 @@
   <data name="NoFileLoaded" xml:space="preserve">
     <value>ファイルがロードされていません。</value>
   </data>
+  <data name="NoSupportPs2Max" xml:space="preserve">
+    <value>「.ps2」と「.max」ファイルはサポートされていません。</value>
+  </data>
 </root>
